# laboratorioProg_LorenzoDinardo

./: .gitignore  CMakeLists.txt  Cliente.cpp  Cliente.h  ConcreteSubject.cpp  ConcreteSubject.h  Conto.cpp  Conto.h  FileManager.cpp  FileManager.h  Logger.cpp  Logger.h  Observer.cpp  Observer.h  README.md  Subject.cpp  Subject.h  TransactionManager.cpp  TransactionManager.h  Transazione.cpp  Transazione.h  main.cpp  maintest.cpp
Test/: Conto_Test.cpp  LoggerTest.cpp  TransactionManagerTest.cpp  TransazioneTest.cpp
files/: Diagramma Progetto.drawio
